<resources>
    <string name="app_name">AppBookReaders</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    //FirstActivity
    <string name="singup_txt">SING UP</string>
    <string name="login_txt">Login</string>


    //Logo
    <string name="logo">BookReaders</string>
    <string name="logo_description">Logo</string>


    //Login Activity
    <string name="username_txt">Username</string>
    <string name="password_txt">Password</string>
    <string name="forgot_txt">Forgot password?</string>

    //Cadastro Activity
    <string name="register_txt">Singup</string>
    <string name="register_username">Username</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_confirmPassword">Confirm password</string>
    <string name="register_haveAcount">Already have an account?</string>

    //Sgnature
    <string name="signature">Igor Goncalo</string>


</resources>